# gloria

./: .gitignore  README.md  compose.yaml  flake.nix  main.py  pyproject.toml
.github/workflows/: codecov.yml
collector/: .coveragerc  alembic.ini  dockerfile  pyproject.toml
collector/src/: main.py  processor.py
collector/src/config/: container.py  init.py  settings.py
collector/src/db/: database.py
collector/src/db/migrations/: env.py  script.py.mako
collector/src/db/migrations/versions/: 2025_06_14_1357-4b38b36eeb0e_initial.py  2025_06_14_1359-99cec9413afe_initial.py  2025_06_15_1204-e71a4c7e1a2f_last.py  2025_06_23_1104-3dfcf849843f_init.py  2025_06_24_1331-ed18070009e8_init.py
collector/src/db/models/: base.py
collector/src/domain/: __init__.py  message_filter.py  message_parser.py  message_source.py  repository.py
collector/src/infra/filters/: name_filter.py
collector/src/infra/logging/: logging.py
collector/src/infra/parsers/: regex_parser.py
collector/src/infra/repository/: fake.py  mock_repository.py  postgres.py
collector/src/infra/source/: fake.py  twitch.py
collector/src/infra/twitch/: twitch_auth.py  twitch_client.py  twitch_converter.py  twitch_source.py
collector/src/infra/twitch/controllers/: auth_controller.py
collector/src/infra/twitch/exceptions/: auth_service.py
collector/src/infra/twitch/services/: auth_service.py
collector/src/infra/utils/: dependencies.py
collector/src/logic/: processor.py
collector/src/logic/messages/: source.py
collector/tests/config/: test_config.py  test_container.py
collector/tests/db/: test_base.py  test_database.py
collector/tests/infra/twitch/: test_twitch_client.py
collector/tests/models/: test_statistic.py
collector/tests/parsers/: test_regex_parser.py
collector/tests/processor/: test_processor.py
collector/tests/repository/: test_fake_repository.py
collector/tests/source/: test_fake_source.py
src/: main.py  processor.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  message_filter.py  message_parser.py  repository.py
src/domain/models/: __init__.py  message.py  statistic.py
src/filters/: message_filter.py
src/infra/filters/: name_filter.py
src/infra/parsers/: __init__.py  regex_parser.py
src/infra/repository/: mock_repository.py
src/models/: Statistic.py  message.py
src/parsers/: statistic.py
tests/models/: test_statistic.py
tests/parsers/: test_regex_parser.py
webui/: dockerfile  pyproject.toml
webui/app/: __init__.py
webui/src/: __init__.py  main.py
webui/tests/: test_views.py
(+16 files in other folders)
