[project]
name = "gloria-stalker"
version = "0.1.0"
description = "project to collect messages from gloria-bot on jeensoff.ttv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "twitchapi>=4.4.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
