[project]
name = "gloria-stalker"
version = "0.1.0"
description = "project to collect messages from gloria-bot on jeensoff.ttv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "twitchapi>=4.4.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "-rsa --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-timeout>=2.4.0",
]

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
mypy_path = ["src"]
strict = true

show_error_codes = true
pretty = true
color_output = true
incremental = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PT", "T20"]
