[project]
name = "gloria-stalker"
version = "0.1.0"
description = "project to collect messages from gloria-bot on jeensoff.ttv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "dependency-injector>=4.48.0",
    "litestar>=2.16.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "twitchapi>=4.4.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "-rsa --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-timeout>=2.4.0",
]

[tool.mypy]
check_untyped_defs = true
explicit_package_bases = true
mypy_path = ["src"]
strict = true
enable_incomplete_feature = ["NewGenericSyntax"]

show_error_codes = true
pretty = true
color_output = true
incremental = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "PT", "T20"]

[tool.ruff.lint.per-file-ignores]
"./src/db/migrations/env.py" = ["E402"]

[tool.uv]
cache-dir = "./.cache/uv"

[tool.ty.src]
root = "./src"
